--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "normalize.css": "^4.2.0",
     "npm": "^5.8.0",
     "owl.carousel": "^2.3.2",
+    "shufflejs": "^5.1.2",
     "sweetalert2": "^6.5.6"
   }
 }
